--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,7 +29,7 @@ div.gag-animation{
 div.sale-box {
     position: absolute;
     left: 0px;
-    width: 69px;
+    width: auto;
     height: 34px;
     line-height: 34px;
     font-size: 25px;
@@ -37,20 +37,31 @@ div.sale-box {
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #4c6b22 !important;
 
     pointer-events: none;
     color: #ffffff;
     -webkit-animation-name: sale;
     -webkit-animation-iteration-count: infinite;
-    -webkit-animation-duration: 2s;
+    -webkit-animation-duration: 4s;
 
     -moz-animation-name: sale;
     -moz-animation-iteration-count: infinite;
-    -moz-animation-duration: 2s;
+    -moz-animation-duration: 4s;
     -moz-animation-name: sale;
 
     animation-name: sale;
+}
+
+div.sale-box:nth-child(3n + 1) {
+    background-color: #12416c !important;
+}
+
+div.sale-box:nth-child(3n + 2) {
+    background-color: #ce1126 !important;
+}
+
+div.sale-box:nth-child(3n + 3) {
+    background-color: #f5af00 !important;
 }
 
 @-webkit-keyframes moveIn {
@@ -82,7 +93,7 @@ div.sale-box {
         opacity: 0;
         top: 100%;
     }
-} 
+}
 
 @-moz-keyframes moveIn {
     0% {
@@ -113,7 +124,7 @@ div.sale-box {
         opacity: 0;
         top: 100%;
     }
-} 
+}
 
 .prepare-gag {
     position: absolute;
@@ -153,7 +164,7 @@ div.sale-box {
 }
 
 .prepare-loader > img {
-    max-width: 463px;
-    max-height: 463px;
-    height: 30%;
+    max-width: 100%;
+    max-height: 100%;
+    height: 100%;
 }
